--- a/html/register-form.html
+++ b/html/register-form.html
@@ -23,9 +23,28 @@
                                 <label for="password">stuCode:</label>
                                 <input type="text" id="stuCode" name="stuCode" class="form-control" required>
                             </div>
+                            <script>
+                                function _listener_recaptcha_register_submit(token){
+                                    console.log("recaptcha token")
+                                    console.log(token)
+                                    try{
+                                        //console.log(window.listener)
+                                        window.listener.recaptcha_register_submit(token)
+                                    }catch(err){
+                                        console.log(err)
+                                    }
+                                }
+
+                            </script>
+                            
     
                             <!-- reCAPTCHA -->
+                            <script src="https://recaptcha.net/recaptcha/api.js" async defer></script>
                             <div class="form-group">
+                                <div id="recaptcha" class="g-recaptcha"
+                                    data-sitekey="6LcTzFwoAAAAAH190Ryn8MqfbsPxfPKbqt9hzuIq"
+                                    data-callback="_listener_recaptcha_register_submit"
+                                    data-size="invisible"></div>
                                 <input type="button" id="submit" value="Register" class="btn btn-primary">
                             </div>
                         </form>
