--- a/html/competition-card.html
+++ b/html/competition-card.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/myctf/css/styles.css">
+<link rel="stylesheet" href="css/styles.css">
 <div style="margin-left: 3%;margin-right: 3%;">
     <div class="card competition-card" style="width: 100%;margin-top: 3%;">
         <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
