--- a/html/competition-signup.html
+++ b/html/competition-signup.html
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     
                     <form id="competition-sign">
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="username">username:</label>
                             <input type="text" id="username" name="username" class="form-control" required>
                         </div>
@@ -16,7 +16,7 @@
                         <div class="form-group">
                             <label for="password">stuCode:</label>
                             <input type="text" id="stuCode" name="stuCode" class="form-control" required>
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <label for="password">competition password:</label>
