--- a/html/competition-main-page.html
+++ b/html/competition-main-page.html
@@ -42,8 +42,8 @@
                 <div class="d-flex justify-content-center" id="competition-name"></div>
                 <div class="d-flex justify-content-center" id="nowscore"></div>
                 <div class="d-flex justify-content-center" id="solved-times"></div>
-                <div style="margin-left: 3%;" id="competition-desc">descccccccccccccccccccccccccccc</div>
-                <div style="margin-left: 3%;" id="competition-attachments"><a href="#">attachment</a></div>
+                <div style="margin-left: 3%; word-break:break-all;" id="competition-desc">descccccccccccccccccccccccccccc</div>
+                <div style="margin-left: 3%; word-break:break-all; " id="competition-attachments"><a href="#">attachment</a></div>
                 <form id="login-form" style="margin-top: 10%; margin-left: 3%; margin-right: 3%;">
                     <div class="form-group d-flex">
                         <input type="text" id="flag" name="flag" class="form-control" placeholder="flag">
