--- a/html/user-profile-page.html
+++ b/html/user-profile-page.html
@@ -12,10 +12,9 @@
                                 <label for="username">Username:</label>
                                 <input type="text" id="username" name="username" class="form-control" required>
                             </div>
-                            <!-- reCAPTCHA -->
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <input type="button" id="submit" value="Update" class="btn btn-primary">
-                            </div>
+                            </div> -->
                             <div class="form-group">
                                 <input type="button" id="reset-password" value="Reset Password" class="btn btn-primary">
                             </div>
