--- a/html/reset-password-page.html
+++ b/html/reset-password-page.html
@@ -8,11 +8,10 @@
                     </div>
                     <div class="card-body">
                         <form id="reset-password-page">
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="username">Old Password:</label>
                                 <input type="text" id="oldpass" name="oldpass" class="form-control" required>
-                            </div>
-
+                            </div> -->
                             <div class="form-group">
                                 <label for="username">New Password:</label>
                                 <input type="password" id="newpass1" name="newpass1" class="form-control" required>
