--- a/html/competition-card.html
+++ b/html/competition-card.html
@@ -12,7 +12,7 @@
         </ul>
         <div class="card-body">
             <button type="button" class="btn btn-primary competition-play" uuid="" competition-name="">Play</button>
-            <button type="button" class="btn btn-primary competition-scoreboard" uuid="" competition-name="">Scoreboard</button>
+            <!-- <button type="button" class="btn btn-primary competition-scoreboard" uuid="" competition-name="">Scoreboard</button> -->
         </div>
     </div>
 </div>
