--- a/html/competition-scoreboard.html
+++ b/html/competition-scoreboard.html
@@ -3,22 +3,13 @@
         <div class="table-responsive">
             <table class="table">
                 <thead>
-                    <tr id="challenge-types">
-                        <th scope="col">#</th>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                    </tr>
-                </thead>
-                <tbody id="scoreboard-body">
                     <tr id="challenge-names">
-                        <th scope="row">Username</th>
+                        <td>Username</td>
                         <td>Rank</td>
                         <td>Score</td>
                     </tr>
-
-                    <tr>
-                    </tr>
-
+                </thead>
+                <tbody id="scoreboard-body">
 
                     <!-- Add more rows as needed -->
                 </tbody>
